Bug 1555637 - Ask the user what to do for local files, if the file is set to save to disk automatically r=Gijs

Differential Revision: https://phabricator.services.mozilla.com/D114045